# airogue

./: main.py  project_analysis.md  pyproject.toml  scratch.py
.windsurf/rules/: llm-guide.md
docs/: ARCHITECTURE.md  IMPROVEMENT_POINTS.md  MODULARIZATION_PLAN.md  MODULE_CONTRACTS.md  NEXT_STEPS.md  TROUBLESHOOTING.md
game/: components.py  pipeline.py  slots.py  states.py  tags.py  tmp.md  world_tools.py
llm/: __init__.py  models.py  world.py
llm/generators/: __init__.py  base.py  cli.py  item_generator.py  mechanics_generator.py  plot_generator.py  theme_generator.py  title_generator.py  world_generator.py
llm/providers/: generic_provider.py  openai_provider.py
tests/: README.md  conftest.py  test_cli.py  test_import_debugging.py  test_integration.py  test_openai_key_requirement.py  test_theme_generator.py  test_world_generation_isolation.py  test_world_generation_stable.py  test_world_generator_e2e.py  test_world_methods.py  test_world_tools.py
